--- a/ConverterMobile/package.json
+++ b/ConverterMobile/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "^1.5.2",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-router-flux": "^4.0.6"
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-router-flux": "^4.0.6",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
