--- a/ConverterMobile/ios/Podfile
+++ b/ConverterMobile/ios/Podfile
@@ -37,6 +37,8 @@ target 'ConverterMobile' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'ConverterMobileTests' do
     inherit! :search_paths
     # Pods for testing
